2.0.0 WIP
    tweaks/fixes:
        - switched command-line argument parsers
        - altered help message


1.2.0
    tweaks/fixes:
        changed '--solo' to '-s'
 
1.1.0
    additions:
        axis labels for the board
        vertical board space dividers
        invalid input message

1.0.1
    tweaks/fixes:
        fixed bug 005

1.0.0
    additions:
        alter command-line arguments
            -theme, -solo, and -h become --theme, --solo, and --help respectively
            add -t alias for --theme, e.g. '-t classic'
            -d=<difficulty> and -solo merge into --solo <difficulty>
            --version, prints the program version to the console. (I really should've done this earlier.)
        error and termination when an unknown argument is given to the program. (Also should've done this one earlier)

    tweaks/fixes:
        update help menu to reflect recent changes

    bugs:
        005 - segementation fault when -t or --solo is the final argument

0.2.3
    tweaks/fixes:
        fixed bug 004.

0.2.2
    additions:
        vertical win-condition recognition for hard-difficulty AI
        
    bugs:
        004 - hard ai will attempt to take the other spot in a diag with two spaces occupied by the same player
        even if there are no open spaces.